@@ -1,4 +1,8 @@
-﻿drkns 20.02.2016 04:16:03 +0200 - build 4555
+﻿w17 20.02.2016 15:03:22 +0300 - build 4556
+
+1. Уточнение 4523. Учтём "D:\Path Name"\ в UnquoteExternal()
+
+drkns 20.02.2016 04:16:03 +0200 - build 4555
 
 1. Продолжение 4548: загружаем pdb только тогда, когда нужно.
 
